# s2t-windows

./: .env.example  .gitignore  README.md  pyproject.toml  s2t.spec  version_info.txt
hooks/: rthook_torch.py
installer/: setup.iss
scripts/: build.py  download_models.py  generate_icon.py
src/: audio_capture.py  config.py  emoji_map.py  hotkeys.py  keyboard_emitter.py  main.py  text_processor.py  tray_app.py  vad.py
src/stt/: base.py  deepgram_engine.py  whisper_engine.py
src/ui/: recording_window.py  settings_window.py
