[project]
name = "s2t"
version = "0.1.0"
description = "Speech-to-Text desktop app for Windows"
requires-python = ">=3.11"
dependencies = [
    "deepgram-sdk>=6.0.1",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pystray>=0.19.5",
    "python-dotenv>=1.2.2",
    "silero-vad>=6.2.1",
]

[project.scripts]
s2t = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
